# Ashborne

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: animations.ini  config.ini  items.csv  items.ini  npc.ini  scenes.ini
resources/maps/: testroom.csv  testroom.ini
resources/ui/: player.ini
src/: Ashborne.cpp  Ashborne.h  Camera.cpp  Camera.h  TextureManager.cpp  TextureManager.h  Tilemap.cpp  Tilemap.h  main.cpp
src/alg/: Vector.cpp  Vector.h
src/character/: Player.cpp  Player.h
src/entity/: Animation.cpp  Animation.h  Attributes.cpp  Attributes.h  Behavior.cpp  Behavior.h  Entity.cpp  Entity.h  EntityHolder.cpp  EntityHolder.h  Npc.cpp  Npc.h  Vision.cpp  Vision.h
src/game/: ItemManager.cpp  ItemManager.h
src/item/: Inventory.cpp  Inventory.h  ItemHolder.cpp  ItemHolder.h
src/scenes/: SceneHolder.cpp  SceneManager.cpp  SceneManager.h
src/ui/: UI.cpp  UI.h  UIManager.cpp  UIManager.h  UIModule.cpp  UIModule.h
src/utils/: Config.cpp  Config.h  Cursor.cpp  Cursor.h  Logger.cpp  Logger.h  Text.cpp  Text.h  Tile.cpp  Tile.h  Timer.cpp  Timer.h
src/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Tilemap.cpp  Tilemap.h
